-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 15.0.1
-
None
-
4d32111da (17.0)
Remote command (Core::Internal::CorePlugin::remoteCommand) processes file open requests during an async/delayed shutdown, found in sentry with Qt Design Studio https://the-qt-company-00.sentry.io/issues/6457165165?project=5421708
Thread 15613824 Crashed:
0 libKSyntaxHighlighting.4.7.0.dylib0x112bb1ce4 KSyntaxHighlighting::Definition::extensions (shared_ptr.h:885)
1 libKSyntaxHighlighting.4.7.0.dylib0x112bc85b0 KSyntaxHighlighting::Repository::definitionsForFileName (copy_if.h:28)
2 libTextEditor.dylib 0x113ab2224 TextEditor::HighlighterHelper::definitionsForFileName (highlighterhelper.cpp:138)
3 libTextEditor.dylib 0x113ab1c90 TextEditor::HighlighterHelper::definitionsForDocument (highlighterhelper.cpp:69)
4 libTextEditor.dylib 0x113b13cc8 TextEditor::TextEditorWidget::configureGenericHighlighter (texteditor.cpp:10293)
5 libTextEditor.dylib 0x113b13c58 TextEditor::Internal::TextEditorWidgetPrivate::reconfigure (texteditor.cpp:3803)
6 QtCore 0x104b68fe8 [inlined] QtPrivate::QSlotObjectBase::call (qobjectdefs_impl.h:486)
7 QtCore 0x104b68fe8 doActivate<T> (qobject.cpp:4115)
8 libCore.dylib 0x113dc18a0 Core::IDocument::filePathChanged (moc_idocument.cpp:317)
9 libCore.dylib 0x113f284f8 Core::IDocument::setFilePath (idocument.cpp:733)
10 libTextEditor.dylib 0x113af0374 TextEditor::TextDocument::setFilePath (textdocument.cpp:703)
11 libTextEditor.dylib 0x113af07cc TextEditor::TextDocument::openImpl (textdocument.cpp:789)
12 libTextEditor.dylib 0x113af0484 TextEditor::TextDocument::open (textdocument.cpp:723)
13 libCore.dylib 0x113e73c7c Core::Internal::EditorManagerPrivate::openEditor (editormanager.cpp:906)
14 libCore.dylib 0x113e750b8 Core::Internal::EditorManagerPrivate::openEditorAt (editormanager.cpp:1002)
15 libCore.dylib 0x113f1c43c Core::ICore::openFiles (icore.cpp:2151)
16 libCore.dylib 0x113e0aa28 Core::Internal::CorePlugin::remoteCommand (coreplugin.cpp:421)
17 libCore.dylib 0x113e0afd4 Core::Internal::CorePlugin::fileOpenRequest (coreplugin.cpp:450)
18 QtCore 0x104b69034 doActivate<T> (qobject.cpp:4127)
19 Qt Design Studio 0x102eb0f20 SharedTools::QtSingleApplication::fileOpenRequest (moc_qtsingleapplication.cpp:167)
20 Qt Design Studio 0x102eb1d40 SharedTools::QtSingleApplication::event (qtsingleapplication.cpp:100)
21 QtWidgets 0x1033c0294 QApplicationPrivate::notify_helper (qapplication.cpp:3296)
22 QtWidgets 0x1033c1250 QApplication::notify (qapplication.cpp:3247)
23 QtCore 0x104b1a38c QCoreApplication::notifyInternal2 (qcoreapplication.cpp:1172)
24 QtGui 0x105092acc [inlined] QGuiApplicationPrivate::processFileOpenEvent (qguiapplication.cpp:2897)
25 QtGui 0x105092acc QGuiApplicationPrivate::processWindowSystemEvent (qguiapplication.cpp:2287)
26 QtGui 0x1050f4ce8 QWindowSystemInterface::handleFileOpenEvent (qwindowsysteminterface.cpp:876)
27 libqcocoa.dylib 0x1041cb538 -[QCocoaApplicationDelegate application:openFiles:] (qcocoaapplicationdelegate.mm:244)
28 CoreFoundation 0x19e748fa0 __invoking___
29 CoreFoundation 0x19e748e18 -[NSInvocation invoke]
30 CoreFoundation 0x19e77db64 -[NSInvocation invokeWithTarget:]
31 CoreFoundation 0x19e7475d0 ___forwarding___
32 CoreFoundation 0x19e74714c __forwarding_prep_0___
33 AppKit 0x1a285ea80 withWindowOrderingObserverHeuristic
34 AppKit 0x1a285e66c -[NSApplication(NSAppleEventHandling) _openURLs:requestedBySourceApp:completionHandler:]
35 AppKit 0x1a2538cc4 __69-[NSApplication _handleAEOpenDocumentsForURLs:]_block_invoke
36 AppKit 0x1a2538a0c -[NSApplication(NSAppleEventHandling) _handleAEOpenDocumentsForURLs:]
37 AppKit 0x1a22e5250 -[NSApplication(NSAppleEventHandling) _handleCoreEvent:withReplyEvent:]
38 Foundation 0x19f90f4a8 -[NSAppleEventManager dispatchRawAppleEvent:withRawReply:handlerRefCon:]
39 Foundation 0x19f90f2a0 _NSAppleEventManagerGenericHandler
40 AE 0x1a5d07130 _AppleEventsCheckInAppWithBlock
41 AE 0x1a5d06a54 _AppleEventsCheckInAppWithBlock
42 AE 0x1a5cfffa0 aeProcessAppleEvent
43 HIToolbox 0x1a9bf320c AEProcessAppleEvent
44 AppKit 0x1a22deb3c _DPSNextEvent
45 AppKit 0x1a2c44c20 -[NSApplication(NSEventRouting) _nextEventMatchingEventMask:untilDate:inMode:dequeue:]
46 AppKit 0x1a22d1870 -[NSApplication run]
47 libqcocoa.dylib 0x1041d7c80 QCocoaEventDispatcher::processEvents (qcocoaeventdispatcher.mm:407)
48 QtCore 0x104b24374 [inlined] QEventLoop::processEvents (qeventloop.cpp:103)
49 QtCore 0x104b24374 QEventLoop::exec (qeventloop.cpp:185)
50 libExtensionSystem.4.7.0.dylib 0x102ffce98 ExtensionSystem::Internal::PluginManagerPrivate::shutdown (pluginmanager.cpp:1508)
51 QtCore 0x104b68fe8 [inlined] QtPrivate::QSlotObjectBase::call (qobjectdefs_impl.h:486)
52 QtCore 0x104b68fe8 doActivate<T> (qobject.cpp:4115)
53 QtCore 0x104b1bf50 [inlined] QCoreApplication::aboutToQuit (moc_qcoreapplication.cpp:266)
54 QtCore 0x104b1bf50 [inlined] QCoreApplication::exit (qcoreapplication.cpp:1574)
55 QtCore 0x104b1bf50 QCoreApplication::event (qcoreapplication.cpp:2074)
56 QtWidgets 0x1033beb28 QApplication::event (qapplication.cpp:1690)
57 QtWidgets 0x1033c0294 QApplicationPrivate::notify_helper (qapplication.cpp:3296)
58 QtWidgets 0x1033c1250 QApplication::notify (qapplication.cpp:3247)
59 QtCore 0x104b1a38c QCoreApplication::notifyInternal2 (qcoreapplication.cpp:1172)
60 QtCore 0x104b1b498 [inlined] QCoreApplication::sendEvent (qcoreapplication.cpp:1612)
61 QtCore 0x104b1b498 QCoreApplicationPrivate::sendPostedEvents (qcoreapplication.cpp:1946)
62 libqcocoa.dylib 0x1041d9148 QCocoaEventDispatcherPrivate::processPostedEvents (qcocoaeventdispatcher.mm:904)
63 libqcocoa.dylib 0x1041da394 QCocoaEventDispatcherPrivate::postedEventsSourceCallback (qcocoaeventdispatcher.mm:926)
64 CoreFoundation 0x19e7688a0 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__
65 CoreFoundation 0x19e768834 __CFRunLoopDoSource0
66 CoreFoundation 0x19e768598 __CFRunLoopDoSources0
67 CoreFoundation 0x19e767134 __CFRunLoopRun
68 CoreFoundation 0x19e766730 CFRunLoopRunSpecific
69 HIToolbox 0x1a9cd552c RunCurrentEventLoopInMode
70 HIToolbox 0x1a9cdb178 ReceiveNextEventCommon
71 HIToolbox 0x1a9cdb504 _BlockUntilNextEventMatchingListInModeWithFilter
72 AppKit 0x1a22de844 _DPSNextEvent
73 AppKit 0x1a2c44c20 -[NSApplication(NSEventRouting) _nextEventMatchingEventMask:untilDate:inMode:dequeue:]
74 AppKit 0x1a22d1870 -[NSApplication run]
75 libqcocoa.dylib 0x1041d7c80 QCocoaEventDispatcher::processEvents (qcocoaeventdispatcher.mm:407)
76 QtCore 0x104b24374 [inlined] QEventLoop::processEvents (qeventloop.cpp:103)
77 QtCore 0x104b24374 QEventLoop::exec (qeventloop.cpp:185)
78 QtCore 0x104b1ab68 QCoreApplication::exec (qcoreapplication.cpp:1515)
79 Qt Design Studio 0x102ea74bc main (main.cpp:971)
80 dyld 0x19e300270 start
81 dyld 0x19e300924 __Block_byref_object_dispose_.10
82 dyld 0x19e30090c dyld4::rebaseSelf
83 dyld 0x19e300920 __Block_byref_object_copy_.9
For Gerrit Dashboard: QTCREATORBUG-32673 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
659127,3 | Do not process remote commands during shutdown | 17.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |