Do not process remote commands during shutdown

The probability of crashes or otherwise undefined behavior is great.

Fixes: QTCREATORBUG-32673
Change-Id: Id00fc817fe8ffe0061aca863917d8b749633e813
Reviewed-by: hjk <hjk@qt.io>